<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="1080pt"
        android:layout_height="130dp"
        android:orientation="horizontal"
        android:background="#AAC95D">
        <ImageButton
            android:id="@+id/tou_xiang"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/logo"
            android:background="@android:color/holo_orange_light"/>
        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/Name"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/mine_hint1"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:textSize="27dp"/>
            <TextView
                android:id="@+id/zuoyou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_hint2"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/shezhi"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:text="设置"
            android:textSize="24sp"
            android:textColor="#005726"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="1080pt"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:background="#FBE697">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/shu_jia"
                android:textSize="28sp"
                android:textColor="#005726"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/manager"
                android:layout_width="120dp"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="100dp"
                android:text="管理"
                android:gravity="center_horizontal"
                android:textColor="#005726"
                android:textSize="26sp"
                android:background="#AAC95D"/>

        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_bookshelf_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:text="我的发布"
            android:textColor="#005726"
            android:textSize="26sp" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_publication_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>



</LinearLayout>