<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bottom_guide"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GuideActivity">

    <FrameLayout
        android:id="@+id/guide_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"/>

    <LinearLayout
        android:id="@+id/bottom_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="#B2CBCF">

        <LinearLayout
            android:id="@+id/booK_city_all"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/txt_book_city"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/book_city_pic"
                android:text="@string/my"
                android:textColor="@android:color/holo_purple"
                android:textSize="16sp"
                app:drawableTopCompat="@drawable/mine_pic" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:layout_marginLeft="15dp"
                android:text="@string/book_cities"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:textColor="@drawable/book_city_text"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/digest_all"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/txt_digest"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/my"
                android:textColor="@android:color/holo_purple"
                android:textSize="16sp"
                android:background="@drawable/digest_pic"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:padding="5dp"
                app:drawableTopCompat="@drawable/digest_pic" />
            <TextView
                android:layout_height="20dp"
                android:layout_width="100dp"
                android:text="@string/digests"
                android:layout_marginLeft="15dp"
                android:gravity="center_horizontal"
                android:textColor="@drawable/digest_text"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mine_all"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/txt_mine"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/mine_pic"
                android:text="@string/my"
                android:textSize="16sp"
                app:drawableTopCompat="@drawable/mine_pic" />
            <TextView
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginLeft="60dp"
                android:text="@string/my"
                android:textSize="16sp"
                android:textColor="@drawable/mine_text"/>
        </LinearLayout>
    </LinearLayout>


    <FrameLayout
        android:id="@+id/fg_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_button" />



</RelativeLayout>